--- a/style.css
+++ b/style.css
@@ -1,4 +1,79 @@
-body {background-color:tan;}
-h1{color:green;}
+*, *::before, *::after{
+    box-sizing: border-box;
+    font-family: Gothem Rounded, sans-serif;
+    font-weight: normal;
+}
 
+body{
+    padding: 20px;
+    margin: 0;
+    background: linear-gradient(to right, #015681, #028b79);
+}
+h1{
+    text-align: center;
+    color: rgb(255, 255, 255);
+}
+.calculator{
+    margin: auto;
+    min-width: 50vh ;
+    width: 25%;
+    border-radius: 5px;
+    background-color: #fffefe;
+    padding: 50px;
+    justify-content: center;
+    align-content: center;
+    min-height: 50vh;
+  
+}
 
+.calculator .input-field{
+  
+  width: 100%;
+  padding: 20px 20px;
+  margin: 10px 0;
+  display: grid;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.calculator > button{
+     width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 30px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+  font-size: 27px;
+  
+}
+
+input[type=number], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.calculator .display{
+  width: 100%;
+  height: 15%;
+  padding: 20px 20px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 17px;
+ 
+  
+}
+footer{
+text-align: center;
+color:rgb(233, 233, 233)
+}
