--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ h1{
 }
 .calculator{
     margin: auto;
-    min-width: 50vh ;
-    width: 25%;
+    min-width: 50vh;
+    width: 30%;
     border-radius: 5px;
     background-color: #fffefe;
     padding: 50px;
@@ -63,15 +63,28 @@ input[type=number], select {
 
 .calculator .display{
   width: 100%;
-  height: 15%;
-  padding: 20px 20px;
+  height: 15vh;
+   padding: 1.25vh 1vh;
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
-  font-size: 17px;
- 
+  font-size: 1.75vh;
+}
+ .calculator .rateDiv{
+  width: 100%;
+  height: 5vh;
+  padding: 1.25vh 1vh;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 1.75vh;
   
+  
+}
+.calculator .rateDiv .rateDiv{
+  align-items: center;
 }
 footer{
 text-align: center;
